--- a/elements.html
+++ b/elements.html
@@ -27,6 +27,7 @@
 						<ul class="links">
 							<li><a href="index.html">This is Massively</a></li>
 							<li><a href="generic.html">Generic Page</a></li>
+							<li><a href="Education.html">Education</a></li>
 							<li class="active"><a href="elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
