--- a/generic.html
+++ b/generic.html
@@ -25,9 +25,10 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">Projects</a></li>
+							<li ><a href="index.html">Projects</a></li>
 							<li class="active"><a href="generic.html">Experience</a></li>
-							<li><a href="elements.html">Education</a></li>
+							<li><a href="Education.html">Education</a></li>
+							<li><a href="elements.html">Elements</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/jomin-joy-9b8633119/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
