--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Projects</a></li>
-							<li><a href="generic.html">Experience</a></li>
-							<li><a href="Education.html">Education</a></li>
+							<li><a href="generic.html">Experience and Skills</a></li>
+							<li><a href="Education.html">Education and Certifications</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
 						<ul class="icons">
