--- a/generic.html
+++ b/generic.html
@@ -27,8 +27,8 @@
 						<ul class="links">
 							<li ><a href="index.html">Projects</a></li>
 							<li class="active"><a href="generic.html">Experience and Skills</a></li>
-							<li><a href="Education.html">Education and Certifications</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="education.html">Education and Certifications</a></li>
+							
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/jomin-joy-9b8633119/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
