--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									<h2><a href="#"> Housing Data Cleaning in SQL </a></h2>
 									<p>In this project the data sanitation and the analysis are done using the SQL server. The data is taken from <a href="https://www.kaggle.com/datasets/bvanntruong/housing-sql-project">Kaggle</a></p>
 								</header>
-								<a href="https://github.com/jominjoy11/Data_cleaning-" class="image main"><img src="\images\housing.jpg" alt="" /></a>
+								<a href="https://github.com/jominjoy11/Data_cleaning-" class="image main"><img src="images\housing.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/jominjoy11/Data_cleaning-" class="button large"> View Project</a></li>
 								</ul>
