--- a/education.html
+++ b/education.html
@@ -60,14 +60,14 @@
 								<header>
 									<h2>Google Data Analytics Professional Certificate</h2>
 									<p>Google (March 2022) </p>
-									<a href="https://coursera.org/share/2b1cf286d0924e03f62c6dcef8247893" class="image fit"><img src="\images\certificate.jpeg" alt="" /></a>
+									<a href="https://coursera.org/share/2b1cf286d0924e03f62c6dcef8247893" class="image fit"><img src="https://coursera.org/share/2b1cf286d0924e03f62c6dcef8247893" alt="" /></a>
 								</header>
 								<p>Understand how to clean and organize data for analysis, and complete analysis and calculations using spreadsheets, SQL and R programming. And Learn key analytical skills (data cleaning, analysis, & visualization) and tools (spreadsheets, SQL, R programming, Tableau). </p>
 									<hr />
 									<header>
 										<h2>Hands-On Tableau Training for Data Science</h2>
 										<p>Google (November 2022) </p>
-										<a href="https://udemy-certificate.s3.amazonaws.com/image/UC-2776612f-e17c-4235-82a4-33456511fe35.jpg" class="image fit"><img src="\images\udemyt.jpg" alt="" /></a>
+										<a href="https://udemy-certificate.s3.amazonaws.com/image/UC-2776612f-e17c-4235-82a4-33456511fe35.jpg" class="image fit"><img src="https://udemy-certificate.s3.amazonaws.com/image/UC-2776612f-e17c-4235-82a4-33456511fe35.jpg" alt="" /></a>
 									</header>
 									<p>The course covered a range of topics, including data connection, preparation, and cleaning, creating various visualizations, advanced techniques for dashboards, and data blending. I gained proficiency in designing interactive and meaningful data visualizations, creating insightful reports, and using calculations and expressions for in-depth analysis.</p>
 										<hr />
