--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 									<a href="https://public.tableau.com/app/profile/jomin.joy/vizzes" class="image fit"><img src="images/tableau.jpg" alt="" /></a>
 									<p>Tabeleau Dashboards where you can find varoius types of visualizations.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://public.tableau.com/app/profile/jomin.joy/vizzes" class="button">View Project</a></li>
 									</ul>
 								</article>
 
